<resources>
    <string name="app_name">UdemyExample1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="createAccount">Create Account</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="loginButton">Login</string>
    <string name="logoutBtn">Logout</string>
    <string name="myStatusText">Any updates?</string>
    <string name="orString">or</string>
    <string name="registerEmail">Email</string>
    <string name="registerPassword">Password</string>
    <string name="registerUsername">Username</string>
    <string name="signUp">Sign Up</string>
    <string name="statusHPText">status</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcomeMessage">Welcome</string>
    <string name="updateStatus">Update</string>
    <string name="updateStatusBtn">Update!</string>
    <string name="usernameHPText">username</string>
    <string name="title_activity_update_status">UpdateStatusActivity</string>
</resources>
